numbers done, symbols started

--- a/src/app/numbers/numbers.component.html
+++ b/src/app/numbers/numbers.component.html
@@ -1,1 +1,104 @@
-<p>numbers works!</p>
+<div class="row">
+	<div class="col-sm-1">
+		<img src="assets/DA.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col">
+		<p class="lead">{{aces}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1 order-sm-last">
+		<img src="assets/D2.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col order-sm-first">
+		<p class="lead text-right">{{twos}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1">
+		<img src="assets/H3.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col">
+		<p class="lead">{{threes}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1 order-sm-last">
+		<img src="assets/C4.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col order-sm-first">
+		<p class="lead text-right">{{fours}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1">
+		<img src="assets/H5.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col">
+		<p class="lead">{{fives}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1 order-sm-last">
+		<img src="assets/D6.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col order-sm-first">
+		<p class="lead text-right">{{sixs}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1">
+		<img src="assets/S7.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col">
+		<p class="lead">{{sevens}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1 order-sm-last">
+		<img src="assets/H8.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col order-sm-first">
+		<p class="lead text-right">{{eights}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1">
+		<img src="assets/D9.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col">
+		<p class="lead">{{nines}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1 order-sm-last">
+		<img src="assets/C10.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col order-sm-first">
+		<p class="lead text-right">{{tens}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1">
+		<img src="assets/SJ.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col">
+		<p class="lead">{{jacks}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1 order-sm-last">
+		<img src="assets/HQ.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col order-sm-first">
+		<p class="lead text-right">{{queens}}</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-1">
+		<img src="assets/SK.png" class="img-fluid rounded mx-auto d-block">
+	</div>
+	<div class="col">
+		<p class="lead">{{kings}}</p>
+	</div>
+</div>
