--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
         <a class="nav-link" routerLink="/symbols" (click)="isMenuCollapsed = true">Symbols</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/types" (click)="isMenuCollapsed = true">Types of Readings</a>
+        <a class="nav-link" routerLink="/readings" (click)="isMenuCollapsed = true">Readings</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="/about" (click)="isMenuCollapsed = true">About</a>
