--- a/src/app/symbols/symbols.component.html
+++ b/src/app/symbols/symbols.component.html
@@ -1,1 +1,10 @@
-<p>symbols works!</p>
+<div class="row justify-content-center">
+	<div class="col-sm-8 text-center">
+		<h3>{{title}}</h3>
+		<p class="lead">{{subtitle}}</p>
+		<p class="lead">{{hearts}}</p>
+		<p class="lead">{{clubs}}</p>
+		<p class="lead">{{diamonds}}</p>
+		<p class="lead">{{spades}}</p>
+	</div>
+</div>
