firebase deploy, pics to symbols

--- a/src/app/symbols/symbols.component.html
+++ b/src/app/symbols/symbols.component.html
@@ -2,9 +2,29 @@
 	<div class="col-sm-8 text-center">
 		<h3>{{title}}</h3>
 		<p class="lead">{{subtitle}}</p>
+	</div>
+</div>
+<div class="row justify-content-center">
+	<div class="col-sm-8 text-center">
+		<img src="assets/heart.png" class="img-fluid rounded mx-auto d-block">
 		<p class="lead">{{hearts}}</p>
+	</div>
+</div>
+<div class="row justify-content-center">
+	<div class="col-sm-8 text-center">
+		<img src="assets/club.png" class="img-fluid rounded mx-auto d-block">
 		<p class="lead">{{clubs}}</p>
+	</div>
+</div>
+<div class="row justify-content-center">
+	<div class="col-sm-8 text-center">
+		<img src="assets/diamond.png" class="img-fluid rounded mx-auto d-block">
 		<p class="lead">{{diamonds}}</p>
+	</div>
+</div>
+<div class="row justify-content-center">
+	<div class="col-sm-8 text-center">
+		<img src="assets/spade.png" class="img-fluid rounded mx-auto d-block">
 		<p class="lead">{{spades}}</p>
 	</div>
 </div>
