types of readings page

--- a/src/app/readings/readings.component.html
+++ b/src/app/readings/readings.component.html
@@ -1,1 +1,29 @@
-<p>readings works!</p>
+<div class="row text-center">
+	<div class="col-sm-4">
+		<figure class="figure">
+			<img class= "figure-img img-fluid rounded" src="/assets/personal.jpg">
+			<figcaption class="figure-caption">
+				<h4>Personal</h4>
+				<p><span [innerHTML]="personal"></span></p>
+			</figcaption>
+		</figure>
+	</div>
+	<div class="col-sm-4">
+		<figure class="figure">
+			<img class= "figure-img img-fluid rounded" src="/assets/relationship.jpg">
+			<figcaption class="figure-caption">
+				<h4>Relationship</h4>
+				<p><span [innerHTML]="relationship"></span></p>
+			</figcaption>
+		</figure>
+	</div>
+	<div class="col-sm-4">
+		<figure class="figure">
+			<img class= "figure-img img-fluid rounded" src="/assets/family.jpg">
+			<figcaption class="figure-caption">
+				<h4>Family</h4>
+				<p><span [innerHTML]="family"></span></p>
+			</figcaption>
+		</figure>
+	</div>
+</div>
