rough draft of all pages

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,27 @@
-<p>about works!</p>
+<div class="text-center">
+	<h3>Not all readings are made equal!</h3>
+	<hr>
+	<p class="text-muted">
+		This discipline is not fortune telling, but rather a sort of SCIENCE. The better you understand the variables of a situation, the more control you have over the conclusion! Let me help you get it right.
+		<br>
+		<br>
+		For questions or requests about customized readings that don't fit into any of the categories above, please message me with the specifics of the situation. I will get back to you within a few days!
+		<br>
+		<br>
+		♥♦♠♣
+	</p>
+	<a href="https://www.instagram.com/katiethecardlady" target="_blank" rel="noopener noreferrer">
+		<img src="assets/icons8-instagram.svg" alt="" width="48" height="48" title="Instagram">
+	</a>
+	<address>
+		<strong>phone</strong>
+		<br>
+		<a href="tel:9196126866">(919) 612-6866</a>
+		<br>
+		<strong>email</strong>
+		<br>
+		<a href="mailto:katie@katiethecardlady.com">katie@katiethecardlady.com</a>
+	</address>
+	<img class="d-block rounded mx-auto" src="assets/background.jpg" alt="four of hearts">
+	<a target="_blank" href="https://icons8.com/icons/set/instagram-new">Instagram icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+</div>
