--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,33 @@
 <nav class="navbar navbar-expand-lg navbar-light mb-3" style="background-color: #e3f2fd;">
-  <a class="navbar-brand" routerLink="" (click)="isMenuCollapsed = true">Home</a>
+	<div class="container">
+		<a class="navbar-brand" routerLink="" (click)="isMenuCollapsed = true">Home</a>
 
-  <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
-  <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
-    &#9776;
-  </button>
+		<!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
+		<button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
+			&#9776;
+		</button>
 
-  <!-- Step 2: Add the ngbCollapse directive to the element below. -->
-  <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
-    <ul class="navbar-nav">
-			<!-- Step 4: Close the menu when a link is clicked. -->
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/numbers" (click)="isMenuCollapsed = true">Numbers</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/symbols" (click)="isMenuCollapsed = true">Symbols</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/readings" (click)="isMenuCollapsed = true">Readings</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/about" (click)="isMenuCollapsed = true">About</a>
-      </li>
-    </ul>
-  </div>
+		<!-- Step 2: Add the ngbCollapse directive to the element below. -->
+		<div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
+			<ul class="navbar-nav">
+				<!-- Step 4: Close the menu when a link is clicked. -->
+				<li class="nav-item active">
+					<a class="nav-link" routerLink="/numbers" (click)="isMenuCollapsed = true">Numbers</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" routerLink="/symbols" (click)="isMenuCollapsed = true">Symbols</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" routerLink="/readings" (click)="isMenuCollapsed = true">Readings</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" routerLink="/about" (click)="isMenuCollapsed = true">About</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 </nav>
 
-<div class="container-fluid">
+<div class="container">
 	<router-outlet></router-outlet>
 </div>
