--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,21 @@
-<h3 [innerHTML]="logotext"></h3>
-<img class="d-block rounded mx-auto" src="assets/background.jpg" alt="four of hearts">
+<div class="text-center">
+	<div class="jumbotron text-center">
+		<h3>♥♣♦♠ Katie&nbsp;the&nbsp;Card&nbsp;Lady ♠♦♣♥</h3>
+		<p class="lead text-muted">
+			Unveiling the Mysterious AncienT Symbology
+			<br>
+			Related to our Year
+			<br>
+			52 cards &amp; 52 weeks
+			<br>
+			4 suits &amp; 4 seasons
+			<br>
+			13 numbers &amp; 13 moons
+		</p>
+	</div>
+	<p class="lead text-center">What are YOUR cards? Email me to find out! ♥</p>
 
+	<a routerLink="/about" >
+		<button type="button" class="btn btn-primary">About</button>
+	</a>
+</div>
