--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 	<div class="jumbotron text-center">
 		<h3>♥♣♦♠ Katie&nbsp;the&nbsp;Card&nbsp;Lady ♠♦♣♥</h3>
 		<p class="lead text-muted">
-			Unveiling the Mysterious AncienT Symbology
+			Unveiling the Mysterious Ancient Symbology
 			<br>
 			Related to our Year
 			<br>
